--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-	 <link rel="profile" href="https://gmpg.org/xfn/11"> 
-	 <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
-	<title>All - Geometry Spot</title>
+<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+	<title>Astra</title>
 
 <style>
     body {
@@ -23,7 +23,7 @@
 
     <html><head><base target="_blank"></head><body><div style="display: flex; justify-content: space-between; margin: 0; padding: 0;">
         <div style="flex-direction: column;">
-          <iframe src="https://1v1.lol" width="970" height="615" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" allowfullscreen="true"></iframe>
+          <iframe src="https://d1tm91r4ytbt54.cloudfront.net/4a2bd50a-0f2f-45be-9e66-a2adf5849945/1680626121644/1v1-lol/index.html" width="970" height="615" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" allowfullscreen="true"></iframe>
         </div>
       </div></body></html>
     
