--- a/roblox.html
+++ b/roblox.html
@@ -35,6 +35,7 @@ body {
             border: none;
             border-radius: 100px;
             cursor: pointer;
+            text-decoration: none;
             margin: 5px;
         }
 
@@ -60,12 +61,12 @@ body {
 
     <div class="button-container">
       <!-- Button 1 -->
-      <button class="custom-button" href="https://गणित.net/play/roblox-corporation/5349/roblox">Server 1</button>
+      <a class="custom-button" href="https://गणित.net/play/roblox-corporation/5349/roblox">Server 1</a>
       <!-- Button 2 -->
-      <button class="custom-button" href="https://acb.caculatorgeo.xyz/demo">Server 2</button>
+      <a class="custom-button" href="https://acb.caculatorgeo.xyz/demo">Server 2</a>
       <!-- Button 3 -->
-      <button class="custom-button" href="https://acb.caculatorgeo.one/demo">Server 3</button>
-    </div>
+      <a class="custom-button" href="https://acb.caculatorgeo.one/demo">Server 3</a>
+  </div>
 
   </div>
     
