--- a/index.html
+++ b/index.html
@@ -1,31 +1,143 @@
-
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="images/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-	<title>Astra</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <title>Astra Games</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            font-family: sans-serif;
+            margin: 0;
+            padding: 0;
+        }
 
-<style>
-    body {
-        background-color: black;
-        color: white;
-    }
-</style>
+        header {
+            text-align: center;
+            padding: 20px;
+        }
 
-</head> 
+        section {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
 
+        article {
+            margin-bottom: 40px;
+        }
 
+        .card {
+            background-color: #333;
+            padding: 15px;
+            border-radius: 8px;
+            margin-top: 20px;
+        }
 
+        .source-link {
+            color: blue;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        img {
+            width: auto;
+            height: 350px;
+            border-radius: 8px;
+            margin-top: 10px;
+        }
+
+        .title {
+            margin-top: 2px;
+            margin-left: 4px;
+            color: white;
+            font-family: sans-serif;
+        }
+
+        .custom-link {
+            color: white;
+            font-weight: bold;
+            text-decoration: none;
+            margin-left: 1210px;
+            position: absolute;
+            top: 5px;
+        }
+    </style>
+</head>
 <body>
 
-    <html><head><base target="_blank"></head><body><div style="display: flex; justify-content: space-between; margin: 0; padding: 0;">
-        <div style="flex-direction: column;">
-          <iframe src="https://d1tm91r4ytbt54.cloudfront.net/4a2bd50a-0f2f-45be-9e66-a2adf5849945/1680626121644/1v1-lol/index.html" width="970" height="615" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" allowfullscreen="true"></iframe>
-        </div>
-      </div></body></html>
-    
+  <h1 class="title">Astra Games</h1>
+  <h1><a href="activities.html" class="custom-link">Activities</a></h1>
+
+
+    <section>
+        <article>
+            <h2>Exploring Exoplanets Beyond Our Solar System</h2>
+            <p>Delve into the fascinating realm of exoplanets, planets that orbit stars outside our solar system. Scientists use advanced telescopes and observation techniques to study these distant worlds, unlocking secrets about their atmospheres and potential habitability.</p>
+            <div class="card">
+                <h3>Source Link</h3>
+                <p>This article was sourced from <a class="source-link" href="https://exoplanets.nasa.gov/news/1773/discovery-alert-earth-sized-planet-has-a-lava-hemisphere/">Astronomy Today</a>.</p>
+            </div>
+        </article>
+
+        <article>
+            <h2>The Mysteries of Black Holes Unveiled</h2>
+            <p>Embark on a journey to unravel the mysteries of black holes, enigmatic cosmic entities with gravitational forces so strong that nothing, not even light, can escape. Learn about recent discoveries and ongoing research shedding light on these fascinating celestial phenomena.</p>
+            <div class="card">
+                <h3>Source Link</h3>
+                <p>This article was sourced from <a class="source-link" href="https://nubeowatches.com/blogs/the-aquanova-journal/unveiling-the-mysteries-of-supermassive-black-holes-what-we-know-so-far">Astrophysics Journal</a>.</p>
+            </div>
+        </article>
+
+        <article>
+            <h2>Journey to the Edge of the Milky Way</h2>
+            <p>Embark on a cosmic journey to the outer reaches of the Milky Way galaxy. Explore the vastness of space, encounter stunning celestial phenomena, and learn about the challenges and wonders that await those who venture to the edge of our galactic neighborhood.</p>
+            <div class="card">
+                <h3>Source Link</h3>
+                <p>This article was sourced from <a class="source-link" href="https://en.wikipedia.org/wiki/Journey_to_the_Edge_of_the_Universe#:~:text=Journey%20to%20the%20Edge%20of%20the%20Universe%20is%20a%20documentary,UK%20edition%20by%20Sean%20Pertwee.">Galactic Explorer Magazine</a>.</p>
+            </div>
+        </article>
+
+        <article>
+            <h2>Unveiling the Secrets of Nebulae</h2>
+            <p>Uncover the secrets of nebulae, the vast clouds of gas and dust scattered throughout the cosmos. Explore the breathtaking beauty of these stellar nurseries and understand their role in the birth and death of stars, as well as their influence on the formation of planetary systems.</p>
+            <div class="card">
+                <h3>Source Link</h3>
+                <p>This article was sourced from <a class="source-link" href="https://www.nbcnews.com/id/wbna46311642">Nebula Research Institute</a>.</p>
+            </div>
+        </article>
+
+        <article>
+            <h2>Mars: The Red Planet's Geological Wonders</h2>
+            <p>Embark on a virtual journey to Mars, the fourth planet from the sun. Explore its rugged terrain, ancient riverbeds, and towering volcanoes. Learn about ongoing Mars missions, discover the geological wonders of the Red Planet, and stay updated on the latest findings from the Martian surface.</p>
+            <div class="card">
+                <h3>Source Link</h3>
+                <p>This article was sourced from <a class="source-link" href="https://www.space.com/47-mars-the-red-planet-fourth-planet-from-the-sun.html">Planetary Gazette</a>.</p>
+            </div>
+        </article>
+
+        <article>
+            <h2>The Search for Extraterrestrial Intelligence (SETI)</h2>
+            <p>Join the quest for extraterrestrial intelligence as scientists use radio telescopes and other methods to scan the cosmos for signals from intelligent civilizations. Explore the history of SETI, recent breakthroughs, and the ongoing efforts to answer the age-old question: Are we alone in the universe?</p>
+            <div class="card">
+                <h3>Source Link</h3>
+                <p>This article was sourced from <a class="source-link" href="https://www.planetary.org/sci-tech/seti">SETI Institute</a>.</p>
+            </div>
+        </article>
+
+        <article>
+            <h2>The Future of Space Exploration: Beyond the Moon</h2>
+            <p>Look ahead to the future of space exploration as humanity sets its sights beyond the Moon. Discover ambitious plans for crewed missions to Mars, asteroid mining, and the establishment of lunar bases. Stay informed about the latest developments shaping the next frontier of human exploration.</p>
+            <div class="card">
+                <h3>Source Link</h3>
+                <p>This article was sourced from <a class="source-link" href="https://www.nasa.gov/image-article/future-of-space-exploration-starts-earth/">Space Exploration Weekly</a>.</p>
+            </div>
+        </article>
+
+    </section>
+
 </body>
 </html>
