--- a/activities.html
+++ b/activities.html
@@ -122,9 +122,9 @@ document.addEventListener("DOMContentLoaded", function () {
             link: "pages/rooftop.html", // Add the desired URL
         },
         {
-            title: "Game Name",
-            image: "images/astra-games.jpg",
-            link: "#", // Add the desired URL
+            title: "Moto X3M",
+            image: "card-icon/motox3m.png",
+            link: "pages/MotoX3M.html", // Add the desired URL
         },
         {
             title: "Game Name",
