--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
             position: absolute;
             top: 5px;
         }
+
+        @media (max-width: 800px) {
+            .custom-link {
+                position: absolute;
+                right: 25px;
+            }
+}
     </style>
 </head>
 <body>
