--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         @media (max-width: 800px) {
             .custom-link {
                 position: absolute;
-                right: 25px;
+                right: 5%;
             }
 }
     </style>
