final update for index

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
         article {
             margin-bottom: 40px;
+            display: flex;
+            flex-wrap: wrap;
         }
 
         .card {
@@ -35,6 +37,7 @@
             padding: 15px;
             border-radius: 8px;
             margin-top: 20px;
+            flex: 1;
         }
 
         .source-link {
@@ -44,10 +47,16 @@
         }
 
         img {
-            width: auto;
-            height: 350px;
+            max-width: 100%;
+            height: auto;
             border-radius: 8px;
             margin-top: 10px;
+        }
+
+        .title-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
         }
 
         .title {
@@ -55,30 +64,29 @@
             margin-left: 4px;
             color: white;
             font-family: sans-serif;
+            font-size: 30px;
         }
 
         .custom-link {
             color: white;
             font-weight: bold;
             text-decoration: none;
-            margin-left: 1210px;
+            font-size: 30px;
+            margin-left: 10px;
+            display: block;
             position: absolute;
-            top: 5px;
+            right: 15px;
+            top: 3px;
         }
 
-        @media (max-width: 800px) {
-            .custom-link {
-                position: absolute;
-                right: 20%;
-            }
-}
     </style>
 </head>
 <body>
 
+<div class="title-container">
   <h1 class="title">Astra Games</h1>
-  <h1><a href="activities.html" class="custom-link">Activities</a></h1>
-
+  <a href="activities.html" class="custom-link">Activities</a>
+</div>
 
     <section>
         <article>
