--- a/activities.html
+++ b/activities.html
@@ -115,19 +115,19 @@
             // Sample card data
             const cards = [
                 {
-                    title: "1v1.lol",
-                    image: "card-icon/1v1lol.png",
-                    link: "games/1v1.lol.html", // Add the desired URL
-                },
-                {
                     title: "Rooftop Sniper",
                     image: "card-icon/rooftop.png",
-                    link: "games/rooftop.html", // Add the desired URL
+                    link: "games/rooftop-snipers.html", // Add the desired URL
                 },
                 {
                     title: "Moto X3M",
                     image: "card-icon/motox3m.png",
                     link: "games/MotoX3M.html", // Add the desired URL
+                },
+                {
+                    title: "Browser",
+                    image: "images/astra-games.jpg",
+                    link: "games/browser.html", // Add the desired URL
                 },
                 // Add more card data with links as needed
             ];
