--- a/games/MotoX3M.html
+++ b/games/MotoX3M.html
@@ -1,34 +1,60 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-<meta charset="UTF-8">
-<link rel="icon" href="images/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-	<title>Astra Games</title>
+    <meta charset="UTF-8">
+    <link rel="icon" href="games/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="games/favicon.ico" type="image/x-icon">
+    <title>Astra Games</title>
 
-<style>
-body {
-  background-color: black;
-  color: white;
-  font-family: sans-serif;
-}
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            font-family: sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-.card {
-  background-color: white;
-  width: 800px;
-  height: 570px;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin: 20px;
-  margin-left: 250px;
-  margin-top: -100px;
-  align-items: center;
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+        }
+
+        .title {
+            margin: 0;
+            color: white;
+            font-family: sans-serif;
+            font-size: 30px;
+        }
+
+        .back-button {
+            background-color: white;
+            color: black;
+            padding: 13px 20px; /* Adjust padding */
+            font-weight: bold;
+            border-radius: 100px;
+            text-decoration: none;
+            margin-left: 10px;
+            cursor: pointer;
+        }
+
+        .card {
+            background-color: white;
+            width: 100%; /* Set width to 100% */
+            max-width: 800px; /* Set max-width */
+            margin: 20px auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         .custom-button {
-            padding: 13px 45px;
+            padding: 13px 20px; /* Adjust padding */
             background-color: black;
             color: white;
             font-weight: bold;
@@ -38,68 +64,51 @@ body {
             cursor: pointer;
             text-decoration: none;
             margin: 5px;
+            display: block;
+            text-align: center; /* Center text */
         }
 
-        /* Style for the button container */
         .button-container {
             display: flex;
             justify-content: center;
+            margin-top: 20px;
         }
+    </style>
 
-        .title-container {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .back-button {
-          background-color: white;
-          color: black;
-          padding: 13px 45px;
-          font-weight: bold;
-          border-radius: 100px;
-          cursor: pointer;
-          text-decoration: none;
-        }
-</style>
-
-</head> 
-
-
+</head>
 
 <body>
 
-  <div class="header">
-    <h1 class="title">Astra Games</h1>
-    <br>
-    <a class="back-button" onclick="goBack()" >Back</a>
-  </div>
-  
-  <script>
-    function goBack() {
-        window.history.back();
-    }
-</script>
+    <div class="header">
+        <h1 class="title">Astra Games</h1>
+        <a class="back-button" onclick="goBack()">Back</a>
+    </div>
 
-  <div class="card">
-    <html><head><base target="_blank"></head><body><div style="display: flex; justify-content: space-between; margin: 5; padding: 0;">
-      <div style="flex-direction: column;">
-        <iframe src="https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/bobydob/JSEngine@99563e3bf6eb25323e3bd5af20dcd9a261b97991/build/m3m/m3m.xml" width="800" height="500" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" allowfullscreen="true"></iframe>
-      </div>
-    </div></body></html>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 
-    <div class="button-container">
-      <!-- Button 1 -->
-      <a class="custom-button" href="https://गणित.net/play/roblox-corporation/5349/roblox">Server 1</a>
-      <!-- Button 2 -->
-      <a class="custom-button" href="https://acb.caculatorgeo.xyz/demo">Server 2</a>
-      <!-- Button 3 -->
-      <a class="custom-button" href="https://acb.caculatorgeo.one/demo">Server 3</a>
-  </div>
+<div class="card">
+  <html><head><base target="_blank"></head><body><div style="display: flex; justify-content: space-between; margin: 5; padding: 0;">
+    <div style="flex-direction: column;">
+      <iframe src="https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/bobydob/JSEngine@99563e3bf6eb25323e3bd5af20dcd9a261b97991/build/m3m/m3m.xml" width="800" height="500" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" allowfullscreen="true"></iframe>
+    </div>
+  </div></body></html>
+
+  <div class="button-container">
+    <!-- Button 1 -->
+    <a class="custom-button" href="https://गणित.net/play/roblox-corporation/5349/roblox">Server 1</a>
+    <!-- Button 2 -->
+    <a class="custom-button" href="https://acb.caculatorgeo.xyz/demo">Server 2</a>
+    <!-- Button 3 -->
+    <a class="custom-button" href="https://acb.caculatorgeo.one/demo">Server 3</a>
 </div>
-  
-   
+</div>
+
 
 
 </body>
+
 </html>
