--- a/games/dune.html
+++ b/games/dune.html
@@ -97,23 +97,22 @@
         }
     </script>
 
-<div class="card">
-  <html><head><base target="_blank"></head><body><div style="display: flex; justify-content: space-between; margin: 5; padding: 0;">
-    <div style="flex-direction: column;">
-      <iframe src="https://acb.caculatorgeo.online/demo" width="800" height="500" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" allowfullscreen="true"></iframe>
+    <div class="card">
+        <div style="display: flex; justify-content: space-between; margin: 5; padding: 0;">
+            <div style="flex-direction: column;">
+                <iframe src="https://scratch.mit.edu/projects/365254777/embed" width="800" height="500" marginwidth="0" marginheight="0"
+                    hspace="0" vspace="0" frameborder="0" scrolling="no" webkitallowfullscreen="true"
+                    mozallowfullscreen="true" msallowfullscreen="true" allowfullscreen="true"></iframe>
+            </div>
+        </div>
+
+        <div class="button-container">
+            <!-- Button 1 -->
+            <a class="custom-button" href="https://counting.jweststudio.com/">Server 1</a>
+            <!-- Button 2 -->
+            <a class="custom-button" href="https://acb.caculatorgeo.xyz/demo">Server 2</a>
+        </div>
     </div>
-  </div></body></html>
-
-  <div class="button-container">
-    <!-- Button 1 -->
-    <a class="custom-button" href="https://गणित.net/play/roblox-corporation/5349/roblox">Server 1</a>
-    <!-- Button 2 -->
-    <a class="custom-button" href="https://acb.caculatorgeo.xyz/demo">Server 2</a>
-    <!-- Button 3 -->
-    <a class="custom-button" href="https://acb.caculatorgeo.one/demo">Server 3</a>
-</div>
-</div>
-
 
 </body>
 
