--- a/games/retro-bowl.html
+++ b/games/retro-bowl.html
@@ -100,7 +100,7 @@
 <div class="card">
   <html><head><base target="_blank"></head><body><div style="display: flex; justify-content: space-between; margin: 5; padding: 0;">
     <div style="flex-direction: column;">
-      <iframe src="https://acb.caculatorgeo.online/demo" width="800" height="500" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" allowfullscreen="true"></iframe>
+      <iframe src="https://book-opensocial.googleusercontent.com/gadgets/ifr?url=https://274079163-174037128449362058.preview.editmysite.com/uploads/b/139890129-899796311729593176/files/rtbl.xml" width="800" height="500" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" webkitallowfullscreen="true" mozallowfullscreen="true" msallowfullscreen="true" allowfullscreen="true"></iframe>
     </div>
   </div></body></html>
 
