--- a/activities.html
+++ b/activities.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="google-adsense-account" content="ca-pub-8380101823127601">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="700x700" href="images/astra.jpg">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Astra">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Activities - Astra Games</title>
+        <meta name="google-adsense-account" content="ca-pub-8380101823127601">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="apple-touch-icon" sizes="700x700" href="images/astra.jpg">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-title" content="Astra">
+        <link rel="icon" href="games/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="games/favicon.ico" type="image/x-icon">
+        <title>Astra Games</title>
 
     <style>
         body {
@@ -112,24 +112,53 @@
         document.addEventListener("DOMContentLoaded", function () {
             const cardContainer = document.getElementById("cardContainer");
     
-            // Sample card data
+            // Game Tab Cards
             const cards = [
                 {
                     title: "Rooftop Sniper",
                     image: "card-icon/rooftop.png",
-                    link: "games/rooftop-snipers.html", // Add the desired URL
+                    link: "games/rooftop-snipers.html",
                 },
                 {
                     title: "Moto X3M",
                     image: "card-icon/motox3m.png",
-                    link: "games/MotoX3M.html", // Add the desired URL
+                    link: "games/MotoX3M.html",
                 },
                 {
                     title: "Browser",
                     image: "images/astra-games.jpg",
-                    link: "games/browser.html", // Add the desired URL
+                    link: "games/browser.html",
                 },
-                // Add more card data with links as needed
+                {
+                    title: "Retro Bowl",
+                    image: "card-icon/retro-bowl.png",
+                    link: "games/retro-bowl.html", 
+                },
+                {
+                    title: "Dunk Digger",
+                    image: "card-icon/dunk-digger.png",
+                    link: "games/dunk-digger.html",
+                },
+                {
+                    title: "Monkey Mart",
+                    image: "card-icon/monkey-mart.png",
+                    link: "games/monkey-mart.html",
+                },
+                {
+                    title: "Dune",
+                    image: "card-icon/dune.png",
+                    link: "games/dune.html",
+                },
+                {
+                    title: "A Small World Cup",
+                    image: "card-icon/small-world-cup.png",
+                    link: "games/a-small-world-cup.html",
+                },
+                {
+                    title: "Drift Boss",
+                    image: "card-icon/drift-boss.png",
+                    link: "games/drift-boss.html",
+                },
             ];
     
             // Function to render cards based on the search input
