--- a/games/browser.html
+++ b/games/browser.html
@@ -2,10 +2,17 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="games/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="games/favicon.ico" type="image/x-icon">
-    <title>Astra Games</title>
+        <meta name="google-adsense-account" content="ca-pub-8380101823127601">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="apple-touch-icon" sizes="700x700" href="images/astra.jpg">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-title" content="Astra">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <title>Astra Games</title>
 
     <style>
         body {
