--- a/activities.html
+++ b/activities.html
@@ -159,6 +159,21 @@
                     image: "card-icon/drift-boss.png",
                     link: "games/drift-boss.html",
                 },
+                {
+                    title: "Basket Random",
+                    image: "card-icon/basket-random.png",
+                    link: "games/basket-random.html",
+                },
+                {
+                    title: "Cookie Clicker",
+                    image: "card-icon/cookie-clicker.png",
+                    link: "games/cookie-clicker.html",
+                },
+                {
+                    title: "Elastic Face",
+                    image: "card-icon/elastic-face.png",
+                    link: "games/Elastic-Face.html",
+                },
             ];
     
             // Function to render cards based on the search input
