--- a/games/dune.html
+++ b/games/dune.html
@@ -12,7 +12,7 @@
         <meta name="apple-mobile-web-app-title" content="Astra">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <title>Astra Games</title>
+        <title>Astra Games - Dune</title>
 
     <style>
         body {
