--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <div class="title-container">
   <h1 class="title">Astra Games</h1>
-  <a href="activities.html" class="custom-link">Activities</a>
+  <a href="75392996798249702482647478387462938472204743.html" class="custom-link">Activities</a>
 </div>
 
     <section>
