--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <meta name="apple-mobile-web-app-title" content="Further">
     <link rel="icon" href="images/further.ico" type="image/x-icon">
     <link rel="shortcut icon" href="further.ico" type="image/x-icon">
-    <title>Astra</title>
+    <title>Further</title>
 
     <!-- EMBED -->
 
-    <meta property="og:title" content="Astra">
+    <meta property="og:title" content="Further">
     <meta property="og:description" content="futher.lol - A place where you can find tons of scripts.">
     <meta property="og:image" content="/images/further.png">
     <meta property="og:url" content="https://further.lol">
