--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     title: "Gunfight Arena",
                     description: "scripts: 0",
                     image: "images/card-image/gunfight.png",
-                    link: "https://example.com",
+                    link: "scripts/gunfight-arena.html",
                 },
                 {
                     title: "Aresenal",
